--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 * {
   font-family: 'Barlow', sans-serif;
+  box-sizing: border-box;
+  color: #f9fafc;
+  margin: 0;
+  padding: 0;
+  text-align: center;
+}
+
+p {
+  color: #DCDCDC;
+}
+
+body {
+  background-color: #1C1C1C;
 }
