--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,8 @@
 * {
   font-family: 'Barlow', sans-serif;
   box-sizing: border-box;
-  color: #f9fafc;
   margin: 0;
   padding: 0;
-  text-align: center;
 }
 
 p {
@@ -12,5 +10,5 @@ p {
 }
 
 body {
-  background-color: #1C1C1C;
+  background-color: #272727;
 }
